--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       }
     </style>
   <meta name="description" content="Software Engineer | Android Developer Portfolio">
-<link rel="icon" href="/favicon.ico" /></head>
+<link rel="icon" href="/portfolio/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
@@ -33,6 +33,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/_expo/static/js/web/index-1f17827f31559829788ba565568a1be5.js" defer></script>
+  <script src="/portfolio/_expo/static/js/web/index-a0f11699ab12c84e9c73a03f3e719633.js" defer></script>
 </body>
 </html>
